# hwlab

./: .gitignore  README.md  Start HW Lab.bat  Start HW Lab.command  Stop HW Lab.bat  Stop HW Lab.command  ai-and-computer-vision-lab.md  flake.nix  learnlab-course.md  package-lock.json  setup.sh
python-client/: command_block.py  lab_server.py  main.py  pyproject.toml  requirements.txt  xiao_client.py
python-client/cv/: __init__.py  acceleration.py  face_detector.py  gestures.py  hand_detector.py  object_detector.py
vue-client/: .env  .env.development  index.html  package-lock.json  package.json
vue-client/src/: App.vue  useHwLab.js
vue-client/src/components/: CodeEditor.vue  CommandLog.vue  LabDashboard.vue  PixelArtStudio.vue  VideoFeed.vue
vue-client/src/composables/: useCommandLog.js
vue-client/src/lib/: pythonServer.js
xiao/: xiao.ino
xiao/src/: HWLabHardware.cpp  HWLabHardware.h  HWLabSetup.cpp  HWLabSetup.h
